[package]
name = "roguelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
# bevy_ecs_tilemap = { version = "0.9.0", features = ["atlas"] }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git" }
big-brain = "0.17.0"
leafwing-input-manager = "0.9.0"
num-integer = "0.1.45"
rand = "0.8.5"
bracket-pathfinding = "0.8.7"
# bevy = { git = "https://github.com/bevyengine/bevy.git" }
